--- a/index.html
+++ b/index.html
@@ -3,67 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Public Media Sharing</title>
+    <title>Upload Images and Videos</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 20px;
+        }
+        .upload-container {
+            margin: 20px;
         }
         input[type="file"] {
-            margin: 10px;
-            padding: 10px;
+            margin: 10px 0;
         }
-        .media-container {
+        .preview-container {
             margin-top: 20px;
         }
-        .media-item {
-            margin-bottom: 20px;
-        }
-        video, img {
+        .preview-container img, .preview-container video {
             max-width: 100%;
-            height: auto;
+            max-height: 400px;
         }
     </style>
 </head>
 <body>
-    <h1>Share Your Media</h1>
-    <p>Upload an image or video to share it publicly:</p>
+    <h1>Upload Your Image or Video</h1>
+    <div class="upload-container">
+        <input type="file" id="fileInput" accept="image/*, video/*" onchange="previewFile()">
+        <button onclick="uploadFile()">Upload to Imgur</button>
+    </div>
 
-    <!-- File Upload Form -->
-    <input type="file" id="mediaInput" accept="image/*, video/*" onchange="displayMedia()" />
-
-    <div class="media-container" id="mediaContainer">
-        <!-- Uploaded media will appear here -->
+    <div class="preview-container">
+        <h2>Preview:</h2>
+        <img id="imgPreview" style="display:none;" />
+        <video id="videoPreview" style="display:none;" controls></video>
     </div>
 
     <script>
-        function displayMedia() {
-            const mediaInput = document.getElementById('mediaInput');
-            const mediaContainer = document.getElementById('mediaContainer');
-            const file = mediaInput.files[0];
-            
-            if (file) {
-                const mediaUrl = URL.createObjectURL(file);
-                let mediaElement;
+        // Preview the selected file (image or video)
+        function previewFile() {
+            const file = document.getElementById('fileInput').files[0];
+            const reader = new FileReader();
 
-                // Check if it's an image or video
-                if (file.type.startsWith('image/')) {
-                    mediaElement = document.createElement('img');
-                    mediaElement.src = mediaUrl;
-                    mediaElement.alt = 'Uploaded Image';
-                } else if (file.type.startsWith('video/')) {
-                    mediaElement = document.createElement('video');
-                    mediaElement.controls = true;
-                    mediaElement.src = mediaUrl;
+            reader.onloadend = function () {
+                if (file.type.startsWith('image')) {
+                    document.getElementById('imgPreview').style.display = 'block';
+                    document.getElementById('videoPreview').style.display = 'none';
+                    document.getElementById('imgPreview').src = reader.result;
+                } else if (file.type.startsWith('video')) {
+                    document.getElementById('videoPreview').style.display = 'block';
+                    document.getElementById('imgPreview').style.display = 'none';
+                    document.getElementById('videoPreview').src = reader.result;
                 }
+            };
 
-                // Add the uploaded media to the page
-                const mediaDiv = document.createElement('div');
-                mediaDiv.classList.add('media-item');
-                mediaDiv.appendChild(mediaElement);
-                mediaContainer.appendChild(mediaDiv);
+            if (file) {
+                reader.readAsDataURL(file);
             }
+        }
+
+        // Upload the file to Imgur
+        function uploadFile() {
+            const file = document.getElementById('fileInput').files[0];
+            if (!file) {
+                alert("Please select a file first!");
+                return;
+            }
+
+            const formData = new FormData();
+            formData.append('image', file);
+
+            // Imgur API upload
+            fetch('https://api.imgur.com/3/image', {
+                method: 'POST',
+                headers: {
+                    'Authorization': 'Client-ID 46da857d3952bd6'  // Your Imgur Client-ID
+                },
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    alert("File uploaded successfully!");
+                    console.log("Imgur URL: " + data.data.link);
+                } else {
+                    alert("Error uploading file");
+                }
+            })
+            .catch(error => {
+                console.error("Error uploading file:", error);
+            });
         }
     </script>
 </body>
